# licoricetest

./: .gitignore  Cargo.toml  ReadMe.md
s/: install  p
src/: main.rs
