[package]
name = "licoricetest"
version = "0.1.0"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.licorice]
git = "https://gitlab.com/icp1994/licorice"

[dependencies.tokio]
version = "0.2.22"
features = ["full"]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.shakmaty]
version = "0.17.1"

[dependencies.rand]
version = "0.8.0"

[dependencies.thiserror]
version = "1.0.23"

[dependencies.mongodb]
version = "1.1.1"

[dependencies.ring]
version = "0.16.19"

[dependencies.base64]
version = "0.13.0"

[dependencies.pgn-reader]
version = "0.15.0"

[dependencies.serde]
version = "1.0.118"

[dependencies.serde_json]
version = "1.0.61"
